day18/sndasm/sndasm_parser.go
// Code generated from .\SndAsm.g4 by ANTLR 4.7.1. DO NOT EDIT.

package sndasm // SndAsm
import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var deserializer = antlr.NewATNDeserializer(nil)
var deserializedATN = deserializer.DeserializeFromUInt16(parserATN)

var literalNames = []string{
	"", "'snd'", "'rcv'", "'set'", "'add'", "'mul'", "'mod'", "'jgz'",
}
var symbolicNames = []string{
	"", "Snd", "Rcv", "Set", "Add", "Mul", "Mod", "Jgz", "Reg", "Value", "WS",
}

var ruleNames = []string{
	"code", "instruction", "unaryRegExpression", "unaryRegInstruction", "unaryExpression",
	"unaryInstruction", "binaryRegExpression", "binaryRegInstruction", "binaryExpression",
	"binaryInstruction", "reg", "regOrValue",
}
var decisionToDFA = make([]*antlr.DFA, len(deserializedATN.DecisionToState))

func init() {
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
}

type SndAsmParser struct {
	*antlr.BaseParser
}

func NewSndAsmParser(input antlr.TokenStream) *SndAsmParser {
	this := new(SndAsmParser)

	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "SndAsm.g4"

	return this
}

// SndAsmParser tokens.
const (
	SndAsmParserEOF   = antlr.TokenEOF
	SndAsmParserSnd   = 1
	SndAsmParserRcv   = 2
	SndAsmParserSet   = 3
	SndAsmParserAdd   = 4
	SndAsmParserMul   = 5
	SndAsmParserMod   = 6
	SndAsmParserJgz   = 7
	SndAsmParserReg   = 8
	SndAsmParserValue = 9
	SndAsmParserWS    = 10
)

// SndAsmParser rules.
const (
	SndAsmParserRULE_code                 = 0
	SndAsmParserRULE_instruction          = 1
	SndAsmParserRULE_unaryRegExpression   = 2
	SndAsmParserRULE_unaryRegInstruction  = 3
	SndAsmParserRULE_unaryExpression      = 4
	SndAsmParserRULE_unaryInstruction     = 5
	SndAsmParserRULE_binaryRegExpression  = 6
	SndAsmParserRULE_binaryRegInstruction = 7
	SndAsmParserRULE_binaryExpression     = 8
	SndAsmParserRULE_binaryInstruction    = 9
	SndAsmParserRULE_reg                  = 10
	SndAsmParserRULE_regOrValue           = 11
)

// ICodeContext is an interface to support dynamic dispatch.
type ICodeContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsCodeContext differentiates from other interfaces.
	IsCodeContext()
}

type CodeContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCodeContext() *CodeContext {
	var p = new(CodeContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SndAsmParserRULE_code
	return p
}

func (*CodeContext) IsCodeContext() {}

func NewCodeContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CodeContext {
	var p = new(CodeContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SndAsmParserRULE_code

	return p
}

func (s *CodeContext) GetParser() antlr.Parser { return s.parser }

func (s *CodeContext) AllInstruction() []IInstructionContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IInstructionContext)(nil)).Elem())
	var tst = make([]IInstructionContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IInstructionContext)
		}
	}

	return tst
}

func (s *CodeContext) Instruction(i int) IInstructionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IInstructionContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IInstructionContext)
}

func (s *CodeContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CodeContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CodeContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.EnterCode(s)
	}
}

func (s *CodeContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.ExitCode(s)
	}
}

func (p *SndAsmParser) Code() (localctx ICodeContext) {
	localctx = NewCodeContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, SndAsmParserRULE_code)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(27)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SndAsmParserSnd)|(1<<SndAsmParserRcv)|(1<<SndAsmParserSet)|(1<<SndAsmParserAdd)|(1<<SndAsmParserMul)|(1<<SndAsmParserMod)|(1<<SndAsmParserJgz))) != 0 {
		{
			p.SetState(24)
			p.Instruction()
		}

		p.SetState(29)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IInstructionContext is an interface to support dynamic dispatch.
type IInstructionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsInstructionContext differentiates from other interfaces.
	IsInstructionContext()
}

type InstructionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstructionContext() *InstructionContext {
	var p = new(InstructionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SndAsmParserRULE_instruction
	return p
}

func (*InstructionContext) IsInstructionContext() {}

func NewInstructionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InstructionContext {
	var p = new(InstructionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SndAsmParserRULE_instruction

	return p
}

func (s *InstructionContext) GetParser() antlr.Parser { return s.parser }

func (s *InstructionContext) UnaryRegExpression() IUnaryRegExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUnaryRegExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUnaryRegExpressionContext)
}

func (s *InstructionContext) UnaryExpression() IUnaryExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUnaryExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUnaryExpressionContext)
}

func (s *InstructionContext) BinaryRegExpression() IBinaryRegExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBinaryRegExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBinaryRegExpressionContext)
}

func (s *InstructionContext) BinaryExpression() IBinaryExpressionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBinaryExpressionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBinaryExpressionContext)
}

func (s *InstructionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstructionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InstructionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.EnterInstruction(s)
	}
}

func (s *InstructionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.ExitInstruction(s)
	}
}

func (p *SndAsmParser) Instruction() (localctx IInstructionContext) {
	localctx = NewInstructionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, SndAsmParserRULE_instruction)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(34)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case SndAsmParserRcv:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(30)
			p.UnaryRegExpression()
		}

	case SndAsmParserSnd:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(31)
			p.UnaryExpression()
		}

	case SndAsmParserSet, SndAsmParserAdd, SndAsmParserMul, SndAsmParserMod:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(32)
			p.BinaryRegExpression()
		}

	case SndAsmParserJgz:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(33)
			p.BinaryExpression()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IUnaryRegExpressionContext is an interface to support dynamic dispatch.
type IUnaryRegExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsUnaryRegExpressionContext differentiates from other interfaces.
	IsUnaryRegExpressionContext()
}

type UnaryRegExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUnaryRegExpressionContext() *UnaryRegExpressionContext {
	var p = new(UnaryRegExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SndAsmParserRULE_unaryRegExpression
	return p
}

func (*UnaryRegExpressionContext) IsUnaryRegExpressionContext() {}

func NewUnaryRegExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UnaryRegExpressionContext {
	var p = new(UnaryRegExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SndAsmParserRULE_unaryRegExpression

	return p
}

func (s *UnaryRegExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *UnaryRegExpressionContext) UnaryRegInstruction() IUnaryRegInstructionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUnaryRegInstructionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUnaryRegInstructionContext)
}

func (s *UnaryRegExpressionContext) Reg() IRegContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRegContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRegContext)
}

func (s *UnaryRegExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UnaryRegExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UnaryRegExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.EnterUnaryRegExpression(s)
	}
}

func (s *UnaryRegExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.ExitUnaryRegExpression(s)
	}
}

func (p *SndAsmParser) UnaryRegExpression() (localctx IUnaryRegExpressionContext) {
	localctx = NewUnaryRegExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, SndAsmParserRULE_unaryRegExpression)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(36)
		p.UnaryRegInstruction()
	}
	{
		p.SetState(37)
		p.Reg()
	}

	return localctx
}

// IUnaryRegInstructionContext is an interface to support dynamic dispatch.
type IUnaryRegInstructionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsUnaryRegInstructionContext differentiates from other interfaces.
	IsUnaryRegInstructionContext()
}

type UnaryRegInstructionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUnaryRegInstructionContext() *UnaryRegInstructionContext {
	var p = new(UnaryRegInstructionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SndAsmParserRULE_unaryRegInstruction
	return p
}

func (*UnaryRegInstructionContext) IsUnaryRegInstructionContext() {}

func NewUnaryRegInstructionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UnaryRegInstructionContext {
	var p = new(UnaryRegInstructionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SndAsmParserRULE_unaryRegInstruction

	return p
}

func (s *UnaryRegInstructionContext) GetParser() antlr.Parser { return s.parser }

func (s *UnaryRegInstructionContext) Rcv() antlr.TerminalNode {
	return s.GetToken(SndAsmParserRcv, 0)
}

func (s *UnaryRegInstructionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UnaryRegInstructionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UnaryRegInstructionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.EnterUnaryRegInstruction(s)
	}
}

func (s *UnaryRegInstructionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.ExitUnaryRegInstruction(s)
	}
}

func (p *SndAsmParser) UnaryRegInstruction() (localctx IUnaryRegInstructionContext) {
	localctx = NewUnaryRegInstructionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, SndAsmParserRULE_unaryRegInstruction)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(39)
		p.Match(SndAsmParserRcv)
	}

	return localctx
}

// IUnaryExpressionContext is an interface to support dynamic dispatch.
type IUnaryExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsUnaryExpressionContext differentiates from other interfaces.
	IsUnaryExpressionContext()
}

type UnaryExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUnaryExpressionContext() *UnaryExpressionContext {
	var p = new(UnaryExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SndAsmParserRULE_unaryExpression
	return p
}

func (*UnaryExpressionContext) IsUnaryExpressionContext() {}

func NewUnaryExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UnaryExpressionContext {
	var p = new(UnaryExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SndAsmParserRULE_unaryExpression

	return p
}

func (s *UnaryExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *UnaryExpressionContext) UnaryInstruction() IUnaryInstructionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IUnaryInstructionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IUnaryInstructionContext)
}

func (s *UnaryExpressionContext) RegOrValue() IRegOrValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRegOrValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRegOrValueContext)
}

func (s *UnaryExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UnaryExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UnaryExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.EnterUnaryExpression(s)
	}
}

func (s *UnaryExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.ExitUnaryExpression(s)
	}
}

func (p *SndAsmParser) UnaryExpression() (localctx IUnaryExpressionContext) {
	localctx = NewUnaryExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, SndAsmParserRULE_unaryExpression)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(41)
		p.UnaryInstruction()
	}
	{
		p.SetState(42)
		p.RegOrValue()
	}

	return localctx
}

// IUnaryInstructionContext is an interface to support dynamic dispatch.
type IUnaryInstructionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsUnaryInstructionContext differentiates from other interfaces.
	IsUnaryInstructionContext()
}

type UnaryInstructionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyUnaryInstructionContext() *UnaryInstructionContext {
	var p = new(UnaryInstructionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SndAsmParserRULE_unaryInstruction
	return p
}

func (*UnaryInstructionContext) IsUnaryInstructionContext() {}

func NewUnaryInstructionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *UnaryInstructionContext {
	var p = new(UnaryInstructionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SndAsmParserRULE_unaryInstruction

	return p
}

func (s *UnaryInstructionContext) GetParser() antlr.Parser { return s.parser }

func (s *UnaryInstructionContext) Snd() antlr.TerminalNode {
	return s.GetToken(SndAsmParserSnd, 0)
}

func (s *UnaryInstructionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *UnaryInstructionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *UnaryInstructionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.EnterUnaryInstruction(s)
	}
}

func (s *UnaryInstructionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.ExitUnaryInstruction(s)
	}
}

func (p *SndAsmParser) UnaryInstruction() (localctx IUnaryInstructionContext) {
	localctx = NewUnaryInstructionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, SndAsmParserRULE_unaryInstruction)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(44)
		p.Match(SndAsmParserSnd)
	}

	return localctx
}

// IBinaryRegExpressionContext is an interface to support dynamic dispatch.
type IBinaryRegExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBinaryRegExpressionContext differentiates from other interfaces.
	IsBinaryRegExpressionContext()
}

type BinaryRegExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBinaryRegExpressionContext() *BinaryRegExpressionContext {
	var p = new(BinaryRegExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SndAsmParserRULE_binaryRegExpression
	return p
}

func (*BinaryRegExpressionContext) IsBinaryRegExpressionContext() {}

func NewBinaryRegExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BinaryRegExpressionContext {
	var p = new(BinaryRegExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SndAsmParserRULE_binaryRegExpression

	return p
}

func (s *BinaryRegExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *BinaryRegExpressionContext) BinaryRegInstruction() IBinaryRegInstructionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBinaryRegInstructionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBinaryRegInstructionContext)
}

func (s *BinaryRegExpressionContext) Reg() IRegContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRegContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRegContext)
}

func (s *BinaryRegExpressionContext) RegOrValue() IRegOrValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRegOrValueContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IRegOrValueContext)
}

func (s *BinaryRegExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BinaryRegExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BinaryRegExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.EnterBinaryRegExpression(s)
	}
}

func (s *BinaryRegExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.ExitBinaryRegExpression(s)
	}
}

func (p *SndAsmParser) BinaryRegExpression() (localctx IBinaryRegExpressionContext) {
	localctx = NewBinaryRegExpressionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, SndAsmParserRULE_binaryRegExpression)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(46)
		p.BinaryRegInstruction()
	}
	{
		p.SetState(47)
		p.Reg()
	}
	{
		p.SetState(48)
		p.RegOrValue()
	}

	return localctx
}

// IBinaryRegInstructionContext is an interface to support dynamic dispatch.
type IBinaryRegInstructionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBinaryRegInstructionContext differentiates from other interfaces.
	IsBinaryRegInstructionContext()
}

type BinaryRegInstructionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBinaryRegInstructionContext() *BinaryRegInstructionContext {
	var p = new(BinaryRegInstructionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SndAsmParserRULE_binaryRegInstruction
	return p
}

func (*BinaryRegInstructionContext) IsBinaryRegInstructionContext() {}

func NewBinaryRegInstructionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BinaryRegInstructionContext {
	var p = new(BinaryRegInstructionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SndAsmParserRULE_binaryRegInstruction

	return p
}

func (s *BinaryRegInstructionContext) GetParser() antlr.Parser { return s.parser }

func (s *BinaryRegInstructionContext) Set() antlr.TerminalNode {
	return s.GetToken(SndAsmParserSet, 0)
}

func (s *BinaryRegInstructionContext) Add() antlr.TerminalNode {
	return s.GetToken(SndAsmParserAdd, 0)
}

func (s *BinaryRegInstructionContext) Mul() antlr.TerminalNode {
	return s.GetToken(SndAsmParserMul, 0)
}

func (s *BinaryRegInstructionContext) Mod() antlr.TerminalNode {
	return s.GetToken(SndAsmParserMod, 0)
}

func (s *BinaryRegInstructionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BinaryRegInstructionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BinaryRegInstructionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.EnterBinaryRegInstruction(s)
	}
}

func (s *BinaryRegInstructionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.ExitBinaryRegInstruction(s)
	}
}

func (p *SndAsmParser) BinaryRegInstruction() (localctx IBinaryRegInstructionContext) {
	localctx = NewBinaryRegInstructionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 14, SndAsmParserRULE_binaryRegInstruction)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(50)
		_la = p.GetTokenStream().LA(1)

		if !(((_la)&-(0x1f+1)) == 0 && ((1<<uint(_la))&((1<<SndAsmParserSet)|(1<<SndAsmParserAdd)|(1<<SndAsmParserMul)|(1<<SndAsmParserMod))) != 0) {
			p.GetErrorHandler().RecoverInline(p)
		} else {
			p.GetErrorHandler().ReportMatch(p)
			p.Consume()
		}
	}

	return localctx
}

// IBinaryExpressionContext is an interface to support dynamic dispatch.
type IBinaryExpressionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsBinaryExpressionContext differentiates from other interfaces.
	IsBinaryExpressionContext()
}

type BinaryExpressionContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBinaryExpressionContext() *BinaryExpressionContext {
	var p = new(BinaryExpressionContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = SndAsmParserRULE_binaryExpression
	return p
}

func (*BinaryExpressionContext) IsBinaryExpressionContext() {}

func NewBinaryExpressionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BinaryExpressionContext {
	var p = new(BinaryExpressionContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = SndAsmParserRULE_binaryExpression

	return p
}

func (s *BinaryExpressionContext) GetParser() antlr.Parser { return s.parser }

func (s *BinaryExpressionContext) BinaryInstruction() IBinaryInstructionContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IBinaryInstructionContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IBinaryInstructionContext)
}

func (s *BinaryExpressionContext) AllRegOrValue() []IRegOrValueContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IRegOrValueContext)(nil)).Elem())
	var tst = make([]IRegOrValueContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IRegOrValueContext)
		}
	}

	return tst
}

func (s *BinaryExpressionContext) RegOrValue(i int) IRegOrValueContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IRegOrValueContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IRegOrValueContext)
}

func (s *BinaryExpressionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BinaryExpressionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BinaryExpressionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.EnterBinaryExpression(s)
	}
}

func (s *BinaryExpressionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(SndAsmListener); ok {
		listenerT.ExitBinaryExpression(s)
	}
}
